2006.01.23

* Added code for VDEF.
* Added TODO.
* Added code for CDEF.
* Created external.py for using the command-line rrdtool binary.
* Added create, update and fetch (with doctests) to external.py.
* Moved old files into an 'old' dir.

2006.01.22

* Added old rrdtool sandbox code from CoyMon repository.
* Added unfinished CoyMon rrd lib dir to PyRRD lib dir.
* Added ChangeLog.
* Added some basic library files with stubbs.
* Added most of the class documentation for pyrrd.graph.* and the beginnings
of some implementation.
* Created graph.validateVName and graph.GraphDefinition, a.k.a. graph.DEF and
added doctests to each.
* Added escaping for colons in timedata.
* Added checks for required attributes.

[From the CoyMon ChangeLog]

2004.11.01

* Reorganized RRD libs in adytum.app.coymon.rrd.
* Copied the RRD wrapper in my sandbox to adytum.app.coymon.rrd.graphs.