@@ -4,13 +4,17 @@ import sys
 from subprocess import call, Popen, PIPE
 
 def _cmd(command, args):
-    if isinstance(args, str):
-        args = re.split('\s+', args.strip())
-    elif isinstance(args, tuple):
-        args = list(args)
-    args = ['rrdtool', command] + args
+    #if isinstance(args, str):
+    #    args = re.split('\s+', args.strip())
+    #elif isinstance(args, tuple):
+    #    args = list(args)
+    #args = ['rrdtool', command] + args
+    #if command == 'graph':
+    #    print ' '.join(args)
+    #args = [' '.join(args)]
+    args = 'rrdtool %s %s' % (command, args)
 
-    p = Popen(args, stdin=PIPE, stdout=PIPE, close_fds=True)
+    p = Popen([args], shell=True, stdin=PIPE, stdout=PIPE, close_fds=True)
     stdout, stderr = (p.stdout, p.stderr)
     err = output = None
     try:
@@ -32,6 +36,10 @@ def create(filename, parameters):
     >>> create(filename, parameters)
     >>> os.path.exists(filename)
     True
+
+    >>> os.unlink(filename)
+    >>> os.path.exists(filename)
+    False
     '''
     parameters = '%s %s' % (filename, parameters)
     output = _cmd('create', parameters)
@@ -52,6 +60,10 @@ def update(filename, data):
     >>> update('/tmp/test.rrd', '920806500:12383 920806800:12393 920807100:12399')
     >>> update('/tmp/test.rrd', '920807400:12405 920807700:12411 920808000:12415')
     >>> update('/tmp/test.rrd', '920808300:12420 920808600:12422 920808900:12423')
+
+    >>> os.unlink(filename)
+    >>> os.path.exists(filename)
+    False
     '''
     parameters = '%s %s' % (filename, data)
     output = _cmd('update', parameters)
@@ -82,6 +94,14 @@ def fetch(filename, query, results_as_generator=True):
     'speed'
     >>> results.next()
     (920804700, None)
+    >>> ds_name, results = fetch('/tmp/test.rrd', 'AVERAGE --start 920804400 --end 920809200',
+    ...   results_as_generator=False)
+    >>> len(results)
+    16
+
+    >>> os.unlink(filename)
+    >>> os.path.exists(filename)
+    False
     '''
     output = fetchRaw(filename, query)
     lines = output.split('\n')
@@ -103,6 +123,74 @@ def generateResultLines(lines):
         else:
             value = float(value)
         yield (int(time.strip()), value)
+
+def graph(filename, parameters):
+    '''
+    >>> filename = '/tmp/speed.png'
+    >>> rrdfile = '/tmp/test.rrd'
+    >>> parameters = ' --start 920804400'
+    >>> parameters += ' DS:speed:COUNTER:600:U:U'
+    >>> parameters += ' RRA:AVERAGE:0.5:1:24'
+    >>> parameters += ' RRA:AVERAGE:0.5:6:10'
+    >>> create(rrdfile, parameters)
+    >>> os.path.exists(rrdfile)
+    True
+
+    >>> update('/tmp/test.rrd', '920804700:12345 920805000:12357 920805300:12363')
+    >>> update('/tmp/test.rrd', '920805600:12363 920805900:12363 920806200:12373')
+    >>> update('/tmp/test.rrd', '920806500:12383 920806800:12393 920807100:12399')
+    >>> update('/tmp/test.rrd', '920807400:12405 920807700:12411 920808000:12415')
+    >>> update('/tmp/test.rrd', '920808300:12420 920808600:12422 920808900:12423')
+
+    >>> parameters = ' --start 920804400 --end 920808000'
+    >>> parameters += ' --vertical-label km/h'
+    >>> parameters += ' DEF:myspeed=%s:speed:AVERAGE' % rrdfile
+    >>> parameters += ' CDEF:realspeed=myspeed,1000,*'
+    >>> parameters += ' CDEF:kmh=myspeed,3600,*'
+    >>> parameters += ' CDEF:fast=kmh,100,GT,kmh,0,IF'
+    >>> parameters += ' CDEF:good=kmh,100,GT,0,kmh,IF'
+    >>> parameters += ' HRULE:100#0000FF:"Maximum allowed"'
+    >>> parameters += ' AREA:good#00FF00:"Good speed"'
+    >>> parameters += ' AREA:fast#00FFFF:"Too fast"'
+    >>> parameters += ' LINE2:realspeed#FF0000:Unadjusted'
+    >>> if os.path.exists(filename):
+    ...   os.unlink(filename)
+    >>> graph(filename, parameters)
+    >>> os.path.exists(filename)
+    True
+
+    >>> os.unlink(rrdfile)
+    >>> os.path.exists(rrdfile)
+    False
+    '''
+    parameters = '%s %s' % (filename, parameters)
+    _cmd('graph', parameters)
+
+def prepareObject(function, obj):
+    '''
+    This is a funtion that serves to make interacting with the
+    backend as transparent as possible. It's sole purpose it to
+    prepare the attributes and data of the various pyrrd objects
+    for use by the functions that call out to rrdtool.
+
+    For all of the rrdtool-methods in this module, we need a filename
+    and then parameters -- both as strings. That's it.
+
+    This function will get called by methods in the pyrrd wrapper
+    objects. For instance, most of the methods of pyrrd.rrd.RRD
+    will call this function. In graph, Pretty much only the method 
+    pyrrd.graph.Graph.write() will call this function.
+    '''
+    param_template = '--%s %s'
+    if function == 'create':
+        params = param_template % ('start', obj.start)
+        params += ' ' + ' '.join([ str(x) for x in obj.ds ])
+        params += ' ' + ' '.join([ str(x) for x in obj.rra ])
+        return (obj.filename, params)
+    if function == 'update':
+        params = ' '.join([ '%s:%s' % (time, values) 
+            for time, values in obj.values ])
+        return (obj.filename, params)
 
 def _test():
     import doctest, external
